WIP porting auto-docking to ros2
Signed-off-by: Emerson Knapp <emerson.b.knapp@gmail.com>

--- a/kobuki_auto_docking/CMakeLists.txt
+++ b/kobuki_auto_docking/CMakeLists.txt
@@ -10,16 +10,11 @@ catkin_package(
                   ecl_threads ecl_geometry ecl_linear_algebra kobuki_msgs kobuki_dock_drive nav_msgs
 )
 
-include_directories(include
-                    ${catkin_INCLUDE_DIRS})
+include_directories(include ${catkin_INCLUDE_DIRS})
 
 add_library(kobuki_auto_docking_ros src/auto_docking_ros.cpp)
-add_library(kobuki_auto_docking_nodelet src/nodelet.cpp)
-
 add_dependencies(kobuki_auto_docking_ros ${catkin_EXPORTED_TARGETS})
-
 target_link_libraries(kobuki_auto_docking_ros ${catkin_LIBRARIES})
-target_link_libraries(kobuki_auto_docking_nodelet ${catkin_LIBRARIES} kobuki_auto_docking_ros)
 
 install(TARGETS kobuki_auto_docking_ros kobuki_auto_docking_nodelet
         DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
@@ -36,8 +31,8 @@ install(DIRECTORY launch
 install(DIRECTORY param
         DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
-install(PROGRAMS scripts/DockDriveActionClient.py
-                 scripts/DockDriveControl.py
-                 scripts/getDockIR.py
-        DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-)
+# install(PROGRAMS scripts/DockDriveActionClient.py
+#                  scripts/DockDriveControl.py
+#                  scripts/getDockIR.py
+#         DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+# )
