--- a/kobuki_auto_docking/package.xml
+++ b/kobuki_auto_docking/package.xml
@@ -14,18 +14,14 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>roscpp</build_depend>
-  <build_depend>rospy</build_depend>
-  <build_depend>nodelet</build_depend>
-  <build_depend>pluginlib</build_depend>
-  <build_depend>message_filters</build_depend>
-  <build_depend>actionlib</build_depend>
-  <build_depend>kdl_conversions</build_depend>
-  
+  <!-- ROS -->
+  <build_depend>rclcpp</build_depend>
+
   <build_depend>std_msgs</build_depend>
   <build_depend>nav_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>actionlib_msgs</build_depend>
+
   <build_depend>kobuki_msgs</build_depend>
   <build_depend>kobuki_dock_drive</build_depend>
 
@@ -33,14 +29,9 @@
   <build_depend>ecl_geometry</build_depend>
   <build_depend>ecl_linear_algebra</build_depend>
 
-  <run_depend>roscpp</run_depend>
-  <run_depend>rospy</run_depend>
-  <run_depend>nodelet</run_depend>
-  <run_depend>pluginlib</run_depend>
-  <run_depend>message_filters</run_depend>
-  <run_depend>actionlib</run_depend>
+  <run_depend>rclcpp</run_depend>
   <run_depend>kdl_conversions</run_depend>
-  
+
   <run_depend>std_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
@@ -52,7 +43,7 @@
   <run_depend>ecl_threads</run_depend>
   <run_depend>ecl_geometry</run_depend>
   <run_depend>ecl_linear_algebra</run_depend>
-  
+
   <export>
     <nodelet plugin="${prefix}/plugins/nodelet_plugins.xml"/>
   </export>
